--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     ],
     "require": {
         "php": ">=5.3",
-        "sastrawi/string-span": "~1"
+        "sastrawi/string-span": "~1",
+        "sastrawi/trka": "0.*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~1",
@@ -36,6 +37,7 @@
         }
     },
     "license": "MIT",
+    "prefer-stable": true,
     "minimum-stability": "dev",
     "support": {
         "issues": "https://github.com/sastrawi/tokenizer/issues",
