cli : add option --delimiter

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
   - hhvm
 
 before_install:
+ - composer selfupdate
  - composer install --dev --prefer-source
  - wget http://get.sensiolabs.org/php-cs-fixer.phar && chmod u+x php-cs-fixer.phar
 
